--- a/styles/sass/partials/_skillsSection.scss
+++ b/styles/sass/partials/_skillsSection.scss
@@ -1,7 +1,7 @@
 //SKILLS 
 
 .skills {
-    margin-top: 100px;
+    margin-top: 92px;
     margin-bottom: 100px;
 }
 
