--- a/styles/styles.css
+++ b/styles/styles.css
@@ -384,6 +384,9 @@ p {
   transition: 0.3s ease;
 }
 
+.home p {
+  margin-bottom: 8px;
+}
 .home p span {
   font-family: "Averia Serif Libre", cursive;
   cursor: crosshair;
@@ -393,7 +396,7 @@ p {
 }
 
 .skills {
-  margin-top: 100px;
+  margin-top: 92px;
   margin-bottom: 100px;
 }
 
